[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rankedutils"
version = "0.1.0"
description = "Utilities for ranked projects"
authors = [{name = "Naddy"}]
dependencies = [
    "aiohttp",
    "dotenv",
    "requests",
]

[tool.setuptools.packages]
find = { include = ["rankedutils"] }
